--- a/MicroChat/auth-service/package.json
+++ b/MicroChat/auth-service/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5"
   }
 }
